@@ -54,7 +54,7 @@ This game is a text-adventure-inspired roguelike video game. The gameplay takes 
 ## Step 4: Running the file
 Once you are in the right folder that your .jar file is in type this command or copy paste it with ctrl+shift+v<br />
 You will need to replace the filename with the file name of your .jar file<br /><br />
-**java -jar (filename).jar**
+**java -jar --enable-preview (filename).jar**
 
 
 ## Step 5: Enjoy
